Refactoring + add_new_member improvements

--- a/templates/add_new_member.html
+++ b/templates/add_new_member.html
@@ -5,11 +5,11 @@
 {% block content %}
 <div class="mx-auto" style="max-width: 800px;">
     <h2 class="mb-4">Add new member</h2>
-    <form class="mb-4" method="POST" action="{{ url_for('add_new_member') }}" hx-post="{{ url_for('add_new_member') }}" hx-trigger="change" hx-swap="outerHTML">
+    <form class="mb-4" method="POST" action="{{ url_for('add_new_member') }}" hx-post="{{ url_for('add_new_member') }}" hx-trigger="change, keyup delay:300ms" hx-swap="outerHTML">
         <div class="mx-auto" style="max-width: 400px;">
             <div class="mb-2">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" name="name" value="{{ name }}" hx-post="{{ url_for('update_name') }}" hx-trigger="keyup changed delay:100ms" hx-target="#new_member" hx-swap="outerHTML">
+                <input type="text" class="form-control" id="name" name="name" value="{{ name }}">
             </div>
             <!-- Right ELO Section -->
             <div class="row align-items-center">
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-
+    
         <!-- Arm selection buttons -->
         <label for="arm" class="form-label mt-4">Choose arm for the calculation:</label>
         <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
@@ -46,19 +46,19 @@
                 <input type="radio" name="arm" id="armLeft" value="left" autocomplete="off" {{ 'checked' if arm == 'left' else '' }} class="visually-hidden">Left arm
             </label>
         </div>
-
+    
         <div class="row flex-nowrap">
             <div class="col" style="width: 30%;">
                 <label for="new_member" class="form-label">New member:</label>
                 <div class="form-control text-secondary text-nowrap overflow-hidden" id="new_member" name="new_member" disabled aria-disabled="true">{{ name or 'Enter a name' }}</div>
             </div>
-
+    
             <div class="col-1 d-flex justify-content-center align-items-center pt-4">
                 <div class="text-center fs-5">
                     <span class="badge bg-dark">VS</span>
                 </div>
             </div>
-
+    
             <div class="col" style="width: 30%;">
                 <label for="armwrestler2" class="form-label text-nowrap">Ranked member:</label>
                 <select class="form-select text-truncate" id="armwrestler2" name="armwrestler2" required>
@@ -69,11 +69,84 @@
                 </select>
             </div>
         </div>
+        {% if calculation_ready %}
+        <label for="arm" class="form-label my-2">Enter score:</label>
+        <div class="row mb-3">
+            <div class="col d-flex justify-content-center align-items-center"></div>
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="text-center fs-3">
+                    <span class="badge bg-dark">{{ armwrestler_1_score }}</span>
+                </div>
+            </div>
+            
+            <div class="col-1 d-flex justify-content-center align-items-center text-center fs-2">:</div>
+    
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="text-center fs-3">
+                    <span class="badge bg-dark">{{ armwrestler_2_score }}</span>
+                </div>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center"></div>
+        </div>
+        {% if custom_score %}
+        <div class="row justify-content-center align-items-center mb-2">
+            <div class="col-3">
+                <input type="number" class="form-control" id="custom_score_1" name="custom_score_1" value="{{ custom_score_1 }}">
+            </div>
+            <div class="col-1 text-center fs-2"></div>
+            <div class="col-3">
+                <input type="number" class="form-control" id="custom_score_2" name="custom_score_2" value="{{ custom_score_2 }}">
+            </div>
+        </div>
+        {% else %}
+        <input type="range" class="form-range mt-2" id="score" name="score" min="0" max="10" value="{{ armwrestler_1_score }}">
+        {% endif %}
+        <label for="arm" class="form-label my-2">
+            ELO from match: <strong>{{ elo_from_match }}</strong>
+        </label>
+        {% endif %}
+        
         <div class="additional-controls mt-2">
+            {% if calculation_ready %}
+            <div class="row">
+                <div class="col">
+                    <div class="row justify-content-start">
+                        <div class="col-auto">
+                            <div class="mb-2">
+                                <label class="btn btn-primary text-nowrap">
+                                    <input type="radio" name="add_to_avg" id="add_to_avg" value="true" autocomplete="off" class="visually-hidden">Add to average
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <div>
+                                <label class="btn btn-primary text-nowrap {{ 'active' if custom_score == 'true' else '' }}">
+                                    <input type="checkbox" name="custom_score" id="custom_score" value="true" autocomplete="off" {{ 'checked' if custom_score == 'true' else '' }} class="visually-hidden">Custom score
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col text-end">
+                    <div>
+                        <label class="btn btn-danger">
+                            <input type="radio" name="reset" id="reset" value="true" autocomplete="off" class="visually-hidden">Reset
+                        </label>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+    
+            {% if error %}
+                <div class="text-danger my-2">
+                    {{ error }}
+                </div>
+            {% endif %}
+    
             {% if member_ready %}
                 <button type="submit" name="add_member" class="btn btn-success mt-3">Add member</button>
             {% endif %}
         </div>
-    </form>
+    </form>    
 </div>
 {% endblock %}
