--- a/templates/closest_matches.html
+++ b/templates/closest_matches.html
@@ -46,11 +46,11 @@
             <div class="card-body">
                 <div class="card-text">
                     <div class="row justify-content-start">
-                        <div class="col-12 col-lg-auto mb-2 mb-lg-0 align-items-center">
+                        <div class="col-12 col-lg-auto mb-2 mb-lg-0 text-start">
                             Win chance:
                             <span class="fs-6 badge text-{{ match[9] }}">{{ match[7] }}%</span>|<span class="fs-6 badge text-{{ match[10] }}">{{ match[8] }}%</span>
                         </div>
-                        <div class="col-12 col-lg-auto mb-2 mb-lg-0 align-items-center">
+                        <div class="col-12 col-lg-auto mb-2 mb-lg-0 text-start">
                             ELO difference: <strong>{{ match[6] }}</strong>
                         </div>
                     </div>
