--- a/templates/history.html
+++ b/templates/history.html
@@ -35,13 +35,13 @@
         <div class="card-body">
             <div class="card-text">
                 <div class="row justify-content-start">
-                    <div class="col-12 col-lg-auto mb-2 mb-lg-0">
+                    <div class="col-12 col-lg-auto mb-2 mb-lg-0 text-start">
                         Arm:<span class="fs-6 badge text-dark"><strong>{{ record[3] }}</strong></span>
                     </div>
-                    <div class="col-12 col-lg-auto mb-2 mb-lg-0">
+                    <div class="col-12 col-lg-auto mb-2 mb-lg-0 text-start">
                         Result:<span class="fs-6 ms-3 badge {{ colors[loop.index - 1][0] }}">{{ record[8] }}</span> : <span class="fs-6 me-2 badge {{ colors[loop.index - 1][1] }}">{{ record[9] }}</span>
                     </div>
-                    <div class="col-12 col-lg-auto mb-2 mb-lg-0">
+                    <div class="col-12 col-lg-auto mb-2 mb-lg-0 text-start">
                         Elo changes:<span class="fs-6 badge {{ colors[loop.index - 1][2] }}">{{ colors[loop.index - 1][4] }}</span>|<span class="fs-6 badge {{ colors[loop.index - 1][3] }}">{{ colors[loop.index - 1][5] }}</span>
                     </div>
                 </div>
