added match formats (not complete)

--- a/templates/supermatch_partial.html
+++ b/templates/supermatch_partial.html
@@ -11,11 +11,11 @@
     </div>
 
     <!-- Armwrestler selection dropdowns -->
-    <div class="row">
+    <div class="row mb-2">
         <div class="col">
             <label for="armwrestler1" class="form-label">Armwrestler 1:</label>
             <select class="form-select text-truncate" id="armwrestler1" name="armwrestler1" required>
-                <option value="none">Choose</option>
+                <option disabled selected value="none">Choose...</option>
                 {% for armwrestler in armwrestlers %}
                     <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_1 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                 {% endfor %}
@@ -32,7 +32,7 @@
             <label for="armwrestler2" class="form-label">Armwrestler 2:</label>
             {% if selected_armwrestler_1 != 'none' %}
                 <select class="form-select text-truncate" id="armwrestler2" name="armwrestler2" required>
-                    <option value="none">Choose</option>
+                    <option disabled selected value="none">Choose...</option>
                     {% for armwrestler in armwrestlers_2 %}
                         <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_2 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                     {% endfor %}
@@ -42,6 +42,17 @@
                     <option value="none">Choose Armwrestler 1</option>
                 </select>
             {% endif %}
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="col">
+            <label for="supermatch_format" class="form-label">Choose supermatch format:</label>
+            <select class="form-select text-truncate" id="supermatch_format" name="supermatch_format" required>
+            {% for format in supermatch_formats %}
+                <option value="{{ format }}" {% if selected_format == format %}selected{% endif %}>{{ format }}</option>
+            {% endfor %}
+            </select>
         </div>
     </div>
 
@@ -84,7 +95,7 @@
         </div>
     </div>
     {% else %}
-    <input type="range" class="form-range mt-2" id="score" name="score" min="0" max="5" value="{{ armwrestler_1_score }}">
+    <input type="range" class="form-range mt-2" id="score" name="score" min="0" max="{{ max_rounds }}" value="{{ value_for_score }}">
     {% endif %}
     <div class="row mb-2">
         <div class="col">
@@ -99,4 +110,4 @@
         </div>
     </div>
     {% endif %}
-</form>
+</form>    
