--- a/templates/add_new_member.html
+++ b/templates/add_new_member.html
@@ -50,7 +50,7 @@
         <div class="row flex-nowrap">
             <div class="col" style="width: 30%;">
                 <label for="new_member" class="form-label">New member:</label>
-                <div class="form-control text-secondary text-nowrap overflow-hidden" id="new_member" name="new_member" disabled aria-disabled="true">{{ name or 'Enter a name' }}</div>
+                <div class="form-control text-secondary text-nowrap text-truncate" id="new_member" name="new_member" disabled aria-disabled="true">{{ name or 'Enter a name' }}</div>
             </div>
     
             <div class="col-1 d-flex justify-content-center align-items-center pt-4">
@@ -62,7 +62,7 @@
             <div class="col" style="width: 30%;">
                 <label for="armwrestler2" class="form-label text-nowrap">Ranked member:</label>
                 <select class="form-select text-truncate" id="armwrestler2" name="armwrestler2" required>
-                    <option value="none">Choose</option>
+                    <option disabled selected value="none">Choose...</option>
                     {% for armwrestler in armwrestlers %}
                         <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_2 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                     {% endfor %}
