--- a/templates/elo_from_match.html
+++ b/templates/elo_from_match.html
@@ -34,7 +34,7 @@
             <div class="col">
                 <label for="armwrestler1" class="form-label">Armwrestler 1:</label>
                 <select class="form-select text-truncate" id="armwrestler1" name="armwrestler1" required>
-                    <option value="none">Choose</option>
+                    <option disabled selected value="none">Choose...</option>
                     {% for armwrestler in armwrestlers %}
                         <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_1 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                     {% endfor %}
@@ -51,7 +51,7 @@
                 <label for="armwrestler2" class="form-label">Armwrestler 2:</label>
                 {% if selected_armwrestler_1 != 'none' %}
                     <select class="form-select text-truncate" id="armwrestler2" name="armwrestler2" required>
-                        <option value="none">Choose</option>
+                        <option disabled selected value="none">Choose...</option>
                         {% for armwrestler in armwrestlers_2 %}
                             <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_2 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                         {% endfor %}
@@ -75,7 +75,7 @@
             </div>
             <div class="col">
                 <select class="form-select text-truncate" id="armwrestler1" name="armwrestler1" required>
-                    <option value="none">Choose</option>
+                    <option disabled selected value="none">Choose...</option>
                     {% for armwrestler in armwrestlers %}
                         <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_1 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                     {% endfor %}
