--- a/templates/prediction_partial.html
+++ b/templates/prediction_partial.html
@@ -15,7 +15,7 @@
         <div class="col">
             <label for="armwrestler1" class="form-label">Armwrestler 1:</label>
             <select class="form-select text-truncate" id="armwrestler1" name="armwrestler1" required>
-                <option value="none">Choose</option>
+                <option disabled selected value="none">Choose...</option>
                 {% for armwrestler in armwrestlers %}
                     <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_1 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                 {% endfor %}
@@ -33,7 +33,7 @@
             <label for="armwrestler2" class="form-label">Armwrestler 2:</label>
             {% if selected_armwrestler_1 != 'none' %}
                 <select class="form-select text-truncate" id="armwrestler2" name="armwrestler2" required>
-                    <option value="none">Choose</option>
+                    <option disabled selected value="none">Choose...</option>
                     {% for armwrestler in armwrestlers_2 %}
                         <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_2 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                     {% endfor %}
@@ -99,7 +99,7 @@
         </div>
     </div>
     <div class="alert alert-secondary mb-2" role="alert">
-        The win chance takes into account the number of rounds and uses the binomial distribution to determine the likelihood of an armwrestler winning/losing the match in percent.
+        The win chance takes into account the number of rounds and uses the binomial distribution to determine the probability of an armwrestler winning/losing the match in percent.
     </div>
     {% endif %}
 </form>
