--- a/templates/prediction_partial.html
+++ b/templates/prediction_partial.html
@@ -89,7 +89,7 @@
         <div class="col d-flex justify-content-center align-items-center"></div>
     </div> 
 
-    <label for="win_chance" class="form-label mb-2">Win chance (5 round match):</label>
+    <label for="win_chance" class="form-label mb-2">Win chance:</label>
     <div class="row mb-4">
         <div class="col">
             <div class="progress" style="height: 2.5rem;" >
@@ -102,5 +102,4 @@
         The win chance takes into account the number of rounds and uses the binomial distribution to determine the probability of an armwrestler winning/losing the match in percent.
     </div>
     {% endif %}
-</form>
-
+</form>    
