--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
         <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
         <script src="https://unpkg.com/htmx.org@1.9.12"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- <script type="speculationrules" nonce="{{ request.csp_nonce }}">
+        <script type="speculationrules" nonce="{{ request.csp_nonce }}">
             {
               "prerender": [
                 {
@@ -23,7 +23,7 @@
                 }
               ]
             }
-        </script> -->
+        </script>
     </head>
     <body class="bg-light">
         {% if username %}
