--- a/templates/history.html
+++ b/templates/history.html
@@ -35,16 +35,16 @@
         <div class="card-body">
             <div class="card-text">
                 <div class="row justify-content-start">
-                    <div class="col-12 col-lg-4 col-xxl-auto mb-2 mb-lg-2 mb-xxl-0 text-start justify-content-start">
+                    <div class="col-12 col-lg-4 col-xxl-auto mb-2 mb-lg-2 mb-xxl-0 text-start">
                         Arm:<span class="fs-6 mx-0 badge text-dark"><strong>{{ record[3] }}</strong></span>
                     </div>
-                    <div class="col-12 col-lg-8 col-xxl-auto mb-2 mb-lg-2 mb-xxl-0 text-start justify-content-start">
+                    <div class="col-12 col-lg-8 col-xxl-auto mb-2 mb-lg-2 mb-xxl-0 text-start">
                         Format:<span class="fs-6 mx-0 badge text-dark">{{ record[12] }}</span>
                     </div>
-                    <div class="col-12 col-lg-4 col-xxl-auto mb-2 mb-lg-0 mb-xxl-0 text-start justify-content-start">
+                    <div class="col-12 col-lg-4 col-xxl-auto mb-2 mb-lg-0 mb-xxl-0 text-start">
                         Result:<span class="fs-6 ms-2 me-1 badge {{ colors[loop.index - 1][0] }}">{{ record[8] }}</span>:<span class="fs-6 ms-1 me-0 badge {{ colors[loop.index - 1][1] }}">{{ record[9] }}</span>
                     </div>
-                    <div class="col-12 col-lg-8 col-xxl-auto mb-0 mb-lg-0 mb-xxl-0 text-start justify-content-start">
+                    <div class="col-12 col-lg-8 col-xxl-auto mb-0 mb-lg-0 mb-xxl-0 text-start">
                         Elo changes:<span class="fs-6 mx-0 badge {{ colors[loop.index - 1][2] }}">{{ colors[loop.index - 1][4] }}</span>|<span class="fs-6 badge mx-0 {{ colors[loop.index - 1][3] }}">{{ colors[loop.index - 1][5] }}</span>
                     </div>
                 </div>
