--- a/templates/add_new_member.html
+++ b/templates/add_new_member.html
@@ -9,7 +9,7 @@
         <div class="mx-auto" style="max-width: 400px;">
             <div class="mb-2">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" name="name" value="{{ name }}">
+                <input type="text" class="form-control" id="name" name="name" value="{{ name }}" autocomplete="name">
             </div>
             <!-- Right ELO Section -->
             <div class="row align-items-center">
@@ -37,7 +37,7 @@
         </div>
     
         <!-- Arm selection buttons -->
-        <label for="arm" class="form-label mt-4">Choose arm for the calculation:</label>
+        <label class="form-label mt-4">Choose arm for the calculation:</label>
         <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
             <label class="btn btn-primary w-50 {{ 'active' if arm == 'right' else '' }}">
                 <input type="radio" name="arm" id="armRight" value="right" autocomplete="off" {{ 'checked' if arm == 'right' else '' }} class="visually-hidden">Right arm
@@ -50,7 +50,9 @@
         <div class="row mb-2 flex-nowrap">
             <div class="col" style="width: 30%;">
                 <label for="new_member" class="form-label">New member:</label>
-                <div class="form-control text-secondary text-nowrap text-truncate" id="new_member" name="new_member" disabled aria-disabled="true">{{ name or 'Enter a name...' }}</div>
+                <select class="form-control text-secondary text-nowrap text-truncate bg-white" id="new_member" name="new_member" disabled>
+                    <option value="{{ name }}">{{ name or 'Enter a name...' }}</option>
+                </select>
             </div>
     
             <div class="col-1 d-flex justify-content-center align-items-center pt-4">
@@ -69,7 +71,7 @@
                 </select>
             </div>
         </div>
-
+    
         <div class="row">
             <div class="col">
                 <label for="supermatch_format" class="form-label">Choose supermatch format:</label>
@@ -80,7 +82,7 @@
                 </select>
             </div>
         </div>
-
+    
         {% if calculation_ready %}
         <label for="arm" class="form-label my-2">Enter score:</label>
         <div class="row mb-3">
@@ -159,6 +161,6 @@
                 <button type="submit" name="add_member" class="btn btn-success mt-3">Add member</button>
             {% endif %}
         </div>
-    </form>    
+    </form>       
 </div>
 {% endblock %}
