--- a/templates/add_new_member_partial.html
+++ b/templates/add_new_member_partial.html
@@ -2,7 +2,7 @@
     <div class="mx-auto" style="max-width: 400px;">
         <div class="mb-2">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" name="name" value="{{ name }}">
+            <input type="text" class="form-control" id="name" name="name" value="{{ name }}" autocomplete="name">
         </div>
         <!-- Right ELO Section -->
         <div class="row align-items-center">
@@ -30,7 +30,7 @@
     </div>
 
     <!-- Arm selection buttons -->
-    <label for="arm" class="form-label mt-4">Choose arm for the calculation:</label>
+    <label class="form-label mt-4">Choose arm for the calculation:</label>
     <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
         <label class="btn btn-primary w-50 {{ 'active' if arm == 'right' else '' }}">
             <input type="radio" name="arm" id="armRight" value="right" autocomplete="off" {{ 'checked' if arm == 'right' else '' }} class="visually-hidden">Right arm
@@ -43,7 +43,9 @@
     <div class="row mb-2 flex-nowrap">
         <div class="col" style="width: 30%;">
             <label for="new_member" class="form-label">New member:</label>
-            <div class="form-control text-secondary text-nowrap text-truncate" id="new_member" name="new_member" disabled aria-disabled="true">{{ name or 'Enter a name...' }}</div>
+            <select class="form-control text-secondary text-nowrap text-truncate bg-white" id="new_member" name="new_member" disabled>
+                <option value="{{ name }}">{{ name or 'Enter a name...' }}</option>
+            </select>
         </div>
 
         <div class="col-1 d-flex justify-content-center align-items-center pt-4">
