--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -11,7 +11,7 @@
     </div>
     <form class="mb-4" hx-get="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML" hx-push-url="true">
         <!-- Arm selection buttons -->
-        <label for="arm" class="form-label">Choose arm for the prediction:</label>
+        <label class="form-label">Choose arm for the prediction:</label>
         <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
             <label class="btn btn-primary w-50 {{ 'active' if arm == 'right' else '' }}">
                 <input type="radio" name="arm" id="armRight" value="right" autocomplete="off" {{ 'checked' if arm == 'right' else '' }} class="visually-hidden">Right arm
@@ -57,15 +57,24 @@
                  
             </div>
         </div>
-    
+        <div class="row mb-2">
+            <div class="col">
+                <label for="supermatch_format" class="form-label">Choose supermatch format:</label>
+                <select class="form-select text-truncate" id="supermatch_format" name="supermatch_format" required>
+                {% for format in supermatch_formats %}
+                    <option value="{{ format }}" {% if selected_format == format %}selected{% endif %}>{{ format }}</option>
+                {% endfor %}
+                </select>
+            </div>
+        </div>
         {% if prediction_ready %}
-        <label for="current_elo" class="form-label mb-2">Current ELO:</label>
+        <label class="form-label mb-2">Current ELO:</label>
         <div class="row mb-2">
             <div class="col"></div>
     
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="text-center fs-5">
-                    <span class="text-{{ armwrestler_color[0] }}">{{armwrestler_1_elo}}</span>
+                    <span class="text-{{ win_chance_color[0] }}">{{armwrestler_1_elo}}</span>
                 </div>
             </div>
             
@@ -73,19 +82,19 @@
     
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="text-center fs-5">
-                    <span class="text-{{ armwrestler_color[1] }}">{{armwrestler_2_elo}}</span>
+                    <span class="text-{{ win_chance_color[1] }}">{{armwrestler_2_elo}}</span>
                 </div>
             </div>
     
             <div class="col"></div>
         </div>
-        <label for="exprected_score" class="form-label mb-2">Approximate expected score:</label>
+        <label class="form-label mb-2">Approximate expected score:</label>
         <div class="row mb-2">
             <div class="col d-flex justify-content-center align-items-center"></div>
     
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="text-center fs-3">
-                    <span class="badge bg-{{ armwrestler_color[0] }}">{{ expected_1 }}</span>
+                    <span class="badge bg-{{ score_color[0] }}">{{ expected_1 }}</span>
                 </div>
             </div>
             
@@ -93,19 +102,20 @@
     
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="text-center fs-3">
-                    <span class="badge bg-{{ armwrestler_color[1] }}">{{ expected_2 }}</span>
+                    <span class="badge bg-{{ score_color[1] }}">{{ expected_2 }}</span>
                 </div>
             </div>
     
             <div class="col d-flex justify-content-center align-items-center"></div>
         </div> 
     
-        <label for="win_chance" class="form-label mb-2">Win chance:</label>
+        <label class="form-label mb-2">Win chance:</label>
         <div class="row mb-4">
             <div class="col">
                 <div class="progress" style="height: 2.5rem;" >
-                    <div class="progress-bar bg-{{ armwrestler_color[0] }} fs-6" role="progressbar" style="width: {{ binom_predicted_1 }}%" aria-valuenow="{{ binom_predicted_1 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_1 }}%</strong></div>
-                    <div class="progress-bar bg-{{ armwrestler_color[1] }} fs-6" role="progressbar" style="width: {{ binom_predicted_2 }}%" aria-valuenow="{{ binom_predicted_2 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_2 }}%</strong></div>
+                    <div class="progress-bar bg-{{ win_chance_color[0] }} fs-6" role="progressbar" style="width: {{ binom_predicted_1 }}%" aria-valuenow="{{ binom_predicted_1 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_1 }}%</strong></div>
+                    <div class="progress-bar bg-secondary fs-6" role="progressbar" style="width: {{ binom_draw }}%" aria-valuenow="{{ binom_draw }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_draw }}%</strong></div>
+                    <div class="progress-bar bg-{{ win_chance_color[1] }} fs-6" role="progressbar" style="width: {{ binom_predicted_2 }}%" aria-valuenow="{{ binom_predicted_2 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_2 }}%</strong></div>
                 </div>
             </div>
         </div>
