--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,6 +24,15 @@
               ]
             }
         </script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-WM53LCFHKN"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-WM53LCFHKN');
+        </script>
     </head>
     <body class="bg-light">
         {% if username %}
