--- a/templates/history.html
+++ b/templates/history.html
@@ -18,34 +18,31 @@
         <div class="card-header bg-transparent">
             <div class="row mt-2">
                 <div class="col-12 col-lg-auto text-center mb-2">
-                    <div class="text-nowrap">
-                        <strong>#{{ record[4] }}</strong> {{ record[1] }}<strong>({{ record[6] }})</strong>
+                    <div>
+                        <strong>#{{ record[4] }}</strong> {{ record[1] }}<strong class="text-nowrap">({{ record[6] }} <span class="{{ colors[loop.index - 1][2] }}">{{ colors[loop.index - 1][4] }}</span>)</strong>
                     </div>
                 </div>
                 <div class="col-12 col-lg-auto text-center mb-2">
                     <span class="badge bg-dark">VS</span>
                 </div>
                 <div class="col-12 col-lg-auto text-center mb-2">
-                    <div class="text-nowrap">
-                        <strong>#{{ record[5] }}</strong> {{ record[2] }}<strong>({{ record[7] }})</strong>
+                    <div>
+                        <strong>#{{ record[5] }}</strong> {{ record[2] }}<strong class="text-nowrap">({{ record[7] }} <span class="{{ colors[loop.index - 1][3] }}">{{ colors[loop.index - 1][5] }}</span>)</strong>
                     </div>
                 </div>
             </div>
         </div>
         <div class="card-body">
             <div class="card-text">
-                <div class="row justify-content-start">
-                    <div class="col-12 col-lg-4 col-xxl-auto mb-2 mb-lg-2 mb-xxl-0 text-start">
+                <div class="row justify-content-md-center justify-content-lg-start">
+                    <div class="col-12 col-md-auto mb-2 mb-md-0 text-start">
                         Arm:<span class="fs-6 mx-0 badge text-dark"><strong>{{ record[3] }}</strong></span>
                     </div>
-                    <div class="col-12 col-lg-8 col-xxl-auto mb-2 mb-lg-2 mb-xxl-0 text-start">
+                    <div class="col-12 col-md-auto mb-2 mb-md-0 text-start">
                         Format:<span class="fs-6 mx-0 badge text-dark">{{ record[12] }}</span>
                     </div>
-                    <div class="col-12 col-lg-4 col-xxl-auto mb-2 mb-lg-0 mb-xxl-0 text-start">
+                    <div class="col-12 col-md-auto mb-0 mb-md-0 text-start">
                         Result:<span class="fs-6 ms-2 me-1 badge {{ colors[loop.index - 1][0] }}">{{ record[8] }}</span>:<span class="fs-6 ms-1 me-0 badge {{ colors[loop.index - 1][1] }}">{{ record[9] }}</span>
-                    </div>
-                    <div class="col-12 col-lg-8 col-xxl-auto mb-0 mb-lg-0 mb-xxl-0 text-start">
-                        Elo changes:<span class="fs-6 mx-0 badge {{ colors[loop.index - 1][2] }}">{{ colors[loop.index - 1][4] }}</span>|<span class="fs-6 badge mx-0 {{ colors[loop.index - 1][3] }}">{{ colors[loop.index - 1][5] }}</span>
                     </div>
                 </div>
             </div>
