--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
         <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
         <script src="https://unpkg.com/htmx.org@1.9.12"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script type="speculationrules" nonce="{{ csp_nonce() }}">
+        <script type="speculationrules">
             {
               "prerender": [
                 {
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </nav>
-        <div class="container my-4 col-lg-8"> 
+        <div class="container my-4 col-lg-10"> 
             <div class="row justify-content-center"> 
                 <div style="max-width: 1200px;"> 
                     {% block content %}{% endblock %}
